Responsive changes Gautam_Bhetariya

--- a/disposal.html
+++ b/disposal.html
@@ -345,7 +345,7 @@
     <!-- Header Bottom End -->
 
     <!-- main Start -->
-    <div class="main-content position-relative main-content-disposal">
+    <div class="main-content position-relative overflow-hidden main-content-disposal">
         <div class="dashboard-btn-list bg-white border border-2 py-30 px-14 d-inline-flex flex-column gap-20 position-absolute top-0 end-0 mt-12 me-100">
             <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-14 lh-1 py-8 px-18" data-bs-toggle="modal" data-bs-target="#jobbulletinbtnmodal">Bulletin</button>
             <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-14 lh-1 py-8 px-18">Contacts</button>
@@ -2088,7 +2088,7 @@
             <div class="modal-body px-30">
               <form class="account-comany-form" action="">
                 <div class="jobmodal-textarea position-relative">
-                  <textarea type="text" class="form-control textInput text-start fst-italic" rows="5" placeholder="Type Bulletin Here"></textarea>
+                  <textarea type="text" class="form-control textInput text-start" rows="5" placeholder="Type Bulletin Here"></textarea>
                   <p class="message m-0 mt-4 text-end position-absolute bottom-0 end-0 me-8">0/50</p>
                 </div>
               </form>
